# clavirio

./: CHANGELOG.md  CLAUDE.md  Cargo.toml  NOTICE  README.md  RELEASE.md  release.toml  sample.txt
.github/workflows/: release.yml
assets/lessons/colemak/: 01_home_index.txt  02_home_middle.txt  03_home_ring.txt  04_home_pinky.txt  05_home_reach.txt  06_home_row.txt  07_home_shift.txt  08_top_index.txt  09_top_middle.txt  10_top_ring.txt  11_top_pinky.txt  12_top_reach.txt  13_top_row.txt  14_top_shift.txt  15_bottom_index.txt  16_bottom_middle.txt  17_bottom_ring.txt  18_bottom_pinky.txt  19_bottom_reach.txt  20_bottom_row.txt  21_bottom_shift.txt
assets/lessons/dvorak/: 01_home_index.txt  02_home_middle.txt  03_home_ring.txt  04_home_pinky.txt  05_home_reach.txt  06_home_row.txt  07_home_shift.txt  08_top_index.txt  09_top_middle.txt  10_top_ring.txt  11_top_pinky.txt  12_top_reach.txt  13_top_row.txt  14_top_shift.txt  15_bottom_index.txt  16_bottom_middle.txt  17_bottom_ring.txt  18_bottom_pinky.txt  19_bottom_reach.txt  20_bottom_row.txt  21_bottom_shift.txt
assets/lessons/qwerty/: 01_home_index.txt  02_home_middle.txt  02_middle_keys.txt  03_home_ring.txt  03_ring_pinky.txt  04_home_pinky.txt  05_home_reach.txt  06_home_row.txt  07_home_shift.txt  08_top_index.txt  09_top_middle.txt  10_top_ring.txt  (+11 more)
assets/quotes/: english.txt
assets/words/: c_cpp.txt  english_1k.txt  english_200.txt  go.txt  html_css.txt  java.txt  javascript.txt  python.txt  rust.txt
src/: app.rs  history.rs  input.rs  keyboard.rs  lessons.rs  main.rs  settings.rs  ui.rs  words.rs
(+6 files in other folders)
