[package]
name = "ferrotype"
version = "0.2.0"
edition = "2021"

[dependencies]
crossterm = { version = "0.29", features = ["event-stream"] }
futures = "0.3"
ratatui = "0.30"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
time = { version = "0.3.47", features = ["local-offset", "formatting"] }
tokio = { version = "1", features = ["rt", "macros", "sync", "time"] }

[profile.release]
lto = true
